@startuml SIEVA_DB_Schema
hide circle
skinparam shadowing false
skinparam linetype ortho

' ============================================================
' UBIGEO
' ============================================================
package "Ubigeo" #EFF6FF {
  entity provincias {
    * id : INTEGER <<PK>>
    --
    * nombre : VARCHAR(100)
  }
  entity distritos {
    * id : INTEGER <<PK>>
    --
    * nombre : VARCHAR(100)
    * provincia_id : INTEGER <<FK>>
  }
}

' ============================================================
' ORGANIZACIÓN
' ============================================================
package "Organizacion" #F0FDF4 {
  entity roles {
    * id : INTEGER <<PK>>
    --
    * codigo : VARCHAR(50)
    * nombre : VARCHAR(100)
    * nivel : INTEGER
    * orden : INTEGER
    modulos_default : JSON
  }
  entity ugeles {
    * id : INTEGER <<PK>>
    --
    * codigo : VARCHAR(20)
    * nombre : VARCHAR(200)
    provincia_id : INTEGER <<FK>>
    is_active : BOOLEAN
  }
  entity instituciones_educativas {
    * id : INTEGER <<PK>>
    --
    * codigo_modular : VARCHAR(20)
    * nombre : VARCHAR(300)
    nivel_educativo : JSON
    * ugel_id : INTEGER <<FK>>
    distrito_id : INTEGER <<FK>>
    is_active : BOOLEAN
  }
}

' ============================================================
' USUARIOS
' ============================================================
package "Usuarios" #FFFBEB {
  entity usuarios {
    * id : INTEGER <<PK>>
    --
    dni : VARCHAR(8)
    codigo_estudiante : VARCHAR(10)
    * nombres : VARCHAR(100)
    * apellidos : VARCHAR(100)
    profesion : VARCHAR(100)
    * password_hash : VARCHAR(200)
    is_active : BOOLEAN
    permisos_modulos : JSON
    * rol_id : INTEGER <<FK>>
    ugel_id : INTEGER <<FK>>
    institucion_educativa_id : INTEGER <<FK>>
    grado_id : INTEGER <<FK>>
    seccion : VARCHAR(10)
    creado_por_id : INTEGER <<FK>>
    * fecha_creacion : DATETIME
    ultimo_acceso : DATETIME
  }
}

' ============================================================
' CURRICULO COMUNICACION
' ============================================================
package "Curriculo Comunicacion" #FAF5FF {
  entity grados {
    * id : INTEGER <<PK>>
    --
    * nombre : VARCHAR(100)
    * numero : INTEGER
    * nivel : VARCHAR(20)
    * orden : INTEGER
  }
  entity capacidades {
    * id : INTEGER <<PK>>
    --
    * nombre : VARCHAR(200)
    * tipo : VARCHAR(20)
    descripcion : TEXT
  }
  entity desempenos {
    * id : INTEGER <<PK>>
    --
    * codigo : VARCHAR(10)
    * descripcion : TEXT
    * grado_id : INTEGER <<FK>>
    * capacidad_id : INTEGER <<FK>>
  }
}

' ============================================================
' CURRICULO MATEMATICA
' ============================================================
package "Curriculo Matematica" #FFF1F2 {
  entity competencias_matematica {
    * id : INTEGER <<PK>>
    --
    * codigo : INTEGER
    * nombre : VARCHAR(200)
    descripcion : TEXT
  }
  entity capacidades_matematica {
    * id : INTEGER <<PK>>
    --
    * orden : INTEGER
    * nombre : VARCHAR(300)
    * competencia_id : INTEGER <<FK>>
  }
  entity estandares_matematica {
    * id : INTEGER <<PK>>
    --
    * descripcion : TEXT
    ciclo : VARCHAR(20)
    * grado_id : INTEGER <<FK>>
    * competencia_id : INTEGER <<FK>>
  }
  entity desempenos_matematica {
    * id : INTEGER <<PK>>
    --
    * codigo : VARCHAR(10)
    * descripcion : TEXT
    * grado_id : INTEGER <<FK>>
    * capacidad_id : INTEGER <<FK>>
  }
}

' ============================================================
' EXAMENES GENERADOS
' ============================================================
package "Examenes Generados" #DBEAFE {
  entity examenes_lectura {
    * id : INTEGER <<PK>>
    --
    * docente_id : INTEGER <<FK>>
    grado_id : INTEGER <<FK>>
    titulo : VARCHAR(300)
    nivel_dificultad : VARCHAR(50)
    modelo_ia : VARCHAR(50)
    lectura : TEXT
    preguntas : JSON
    tabla_respuestas : JSON
    desempenos_usados : TEXT
    * fecha_creacion : DATETIME
  }
  entity examenes_matematica {
    * id : INTEGER <<PK>>
    --
    * docente_id : INTEGER <<FK>>
    grado_id : INTEGER <<FK>>
    competencia_id : INTEGER <<FK>>
    titulo : VARCHAR(300)
    nivel_dificultad : VARCHAR(50)
    modelo_ia : VARCHAR(50)
    situacion_problematica : TEXT
    preguntas : JSON
    tabla_respuestas : JSON
    desempenos_usados : TEXT
    * fecha_creacion : DATETIME
  }
}

' ============================================================
' ASIGNACIONES Y PROGRESO
' ============================================================
package "Asignaciones y Progreso" #FEFCE8 {
  entity codigos_clase {
    * id : INTEGER <<PK>>
    --
    * codigo : VARCHAR(10)
    * creado_por_id : INTEGER <<FK>>
    * institucion_educativa_id : INTEGER <<FK>>
    * grado_id : INTEGER <<FK>>
    * seccion : VARCHAR(10)
    max_estudiantes : INTEGER
    is_active : BOOLEAN
    fecha_expiracion : DATETIME
  }
  entity asignaciones_examen {
    * id : INTEGER <<PK>>
    --
    * tipo_examen : VARCHAR(20)
    examen_lectura_id : INTEGER <<FK>>
    examen_matematica_id : INTEGER <<FK>>
    * asignado_por_id : INTEGER <<FK>>
    institucion_educativa_id : INTEGER <<FK>>
    grado_id : INTEGER <<FK>>
    seccion : VARCHAR(10)
    fecha_inicio : DATETIME
    fecha_fin : DATETIME
    duracion_minutos : INTEGER
    intentos_permitidos : INTEGER
    mostrar_resultados : BOOLEAN
    is_active : BOOLEAN
    fecha_creacion : DATETIME
  }
  entity intentos_examen {
    * id : INTEGER <<PK>>
    --
    * asignacion_id : INTEGER <<FK>>
    * estudiante_id : INTEGER <<FK>>
    * numero_intento : INTEGER
    * estado : VARCHAR(20)
    fecha_inicio : DATETIME
    fecha_fin : DATETIME
    respuestas : JSON
    puntaje_total : FLOAT
    preguntas_correctas : INTEGER
    preguntas_total : INTEGER
    nivel_logro : VARCHAR(50)
    resultados_por_desempeno : JSON
    fecha_creacion : DATETIME
  }
  entity progreso_estudiante {
    * id : INTEGER <<PK>>
    --
    * estudiante_id : INTEGER <<FK>>
    * area : VARCHAR(20)
    total_examenes_completados : INTEGER
    puntaje_promedio : FLOAT
    nivel_logro_actual : VARCHAR(50)
    dominio_desempenos : JSON
    ultima_actividad : DATETIME
  }
}

' ============================================================
' RELACIONES
' ============================================================
provincias               ||--o{ distritos                 : ""
provincias               ||--o{ ugeles                    : ""
ugeles                   ||--|{ instituciones_educativas   : ""
distritos                ||--o{ instituciones_educativas   : ""

roles                    ||--|{ usuarios                   : ""
ugeles                   ||--o{ usuarios                   : ""
instituciones_educativas ||--o{ usuarios                   : ""
grados                   ||--o{ usuarios                   : ""
usuarios                 ||--o{ usuarios                   : "creado_por"

grados                   ||--o{ desempenos                 : ""
capacidades              ||--o{ desempenos                 : ""

competencias_matematica  ||--|{ capacidades_matematica     : ""
competencias_matematica  ||--o{ estandares_matematica      : ""
grados                   ||--o{ estandares_matematica      : ""
grados                   ||--o{ desempenos_matematica      : ""
capacidades_matematica   ||--o{ desempenos_matematica      : ""

usuarios                 ||--o{ examenes_lectura           : "genera"
grados                   ||--o{ examenes_lectura           : ""
usuarios                 ||--o{ examenes_matematica        : "genera"
grados                   ||--o{ examenes_matematica        : ""
competencias_matematica  ||--o{ examenes_matematica        : ""

usuarios                 ||--o{ codigos_clase              : "crea"
instituciones_educativas ||--o{ codigos_clase              : ""
grados                   ||--o{ codigos_clase              : ""

examenes_lectura         ||--o{ asignaciones_examen        : ""
examenes_matematica      ||--o{ asignaciones_examen        : ""
usuarios                 ||--o{ asignaciones_examen        : "asigna"
instituciones_educativas ||--o{ asignaciones_examen        : ""
grados                   ||--o{ asignaciones_examen        : ""

asignaciones_examen      ||--|{ intentos_examen            : ""
usuarios                 ||--o{ intentos_examen            : "rinde"
usuarios                 ||--o{ progreso_estudiante        : ""

@enduml
